--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,5 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-apply plugin: 'com.jakewharton.butterknife'
 apply plugin: 'kotlin-android-extensions'
 
 android {
@@ -22,27 +21,28 @@ android {
     }
 }
 
+def supportVersion = '26.0.2'
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    compile 'com.android.support:appcompat-v7:26.0.2'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:support-v4:26.0.2'
     compile "com.android.support:appcompat-v7:$supportVersion"
+    compile "com.android.support:support-v4:$supportVersion"
     compile "com.android.support:cardview-v7:$supportVersion"
     compile "com.android.support:recyclerview-v7:$supportVersion"
     compile "com.android.support:design:$supportVersion"
-    compile "com.android.support:palette-v7:$supportVersion"
-    compile "com.android.support:customtabs:$supportVersion"
-    compile "com.android.support:support-v4:$supportVersion"
-    compile 'com.android.support:recyclerview-v7:26.0.2'
+//    compile "com.android.support:palette-v7:$supportVersion"
+//    compile "com.android.support:customtabs:$supportVersion"
+//    compile "com.android.support:support-core-utils:$supportVersion"
+//    compile "com.android.support:support-annotations:$supportVersion"
+
 
     compile 'com.squareup.picasso:picasso:2.5.2'
     testCompile 'junit:junit:4.12'
-
+    compile "com.google.android.exoplayer:exoplayer:r2.5.1"
 }
 repositories {
     mavenCentral()
