--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'org.greenrobot.greendao'
+apply plugin: 'me.tatarka.retrolambda'
 
 android {
     compileSdkVersion 26
@@ -19,9 +21,19 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    configurations.all {
+        resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
+    }
+
+    compileOptions {
+        targetCompatibility 1.7
+        sourceCompatibility 1.7
+    }
 }
 
 def supportVersion = '26.0.2'
+def retrofitVersion = '2.3.0'
+def transformVersion = '1.2'
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
@@ -34,16 +46,43 @@ dependencies {
     compile "com.android.support:cardview-v7:$supportVersion"
     compile "com.android.support:recyclerview-v7:$supportVersion"
     compile "com.android.support:design:$supportVersion"
-//    compile "com.android.support:palette-v7:$supportVersion"
-//    compile "com.android.support:customtabs:$supportVersion"
-//    compile "com.android.support:support-core-utils:$supportVersion"
-//    compile "com.android.support:support-annotations:$supportVersion"
 
+    compile 'org.greenrobot:greendao:3.2.2' // add library
 
     compile 'com.squareup.picasso:picasso:2.5.2'
     testCompile 'junit:junit:4.12'
     compile "com.google.android.exoplayer:exoplayer:r2.5.1"
+
+    // retrofit
+    compile "com.squareup.retrofit2:retrofit:$retrofitVersion"
+    compile "com.squareup.retrofit2:adapter-rxjava:$retrofitVersion"
+    compile "com.squareup.retrofit2:converter-gson:$retrofitVersion"
+    // rxjava
+    compile 'io.reactivex:rxandroid:1.2.1'
+   // transform
+    compile "com.mobandme:android-transformer:$transformVersion"
+    provided "com.mobandme:android-transformer-compiler:$transformVersion"
+
+    compile 'com.google.guava:guava:23.0-android'
+
+    def daggerVersion = '2.11'
+    // dagger
+    compile "com.google.dagger:dagger:$daggerVersion"
+    compile "com.google.dagger:dagger-android-support:$daggerVersion"
+    annotationProcessor "com.google.dagger:dagger-compiler:$daggerVersion"
+
+    // dagger.android
+    compile 'com.google.dagger:dagger-android:2.10'
+    compile 'com.google.dagger:dagger-android-support:2.10' // if you use the support libraries
+    annotationProcessor 'com.google.dagger:dagger-android-processor:2.10'
+
+    // backport of java 8 lambda to java 7,6
+    compile 'net.orfjackal.retrolambda:retrolambda:2.5.1'
 }
 repositories {
     mavenCentral()
+}
+greendao{
+    schemaVersion 1
+    targetGenDir "src/main/java"
 }
