--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.example.jocke.kotlin">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
 
-    <uses-permission android:name="android.permission.INTERNET" />
-    <permission android:name="android.permission.INTERNET" />
-
+    <permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -23,12 +22,13 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-
         <activity
             android:name=".SplashActivity"
-            android:theme="@style/FullscreenTheme"
             android:configChanges="orientation|keyboardHidden|screenSize"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:theme="@style/FullscreenTheme">
+        </activity>
+        <activity android:name=".TeamLineupFragment">
         </activity>
     </application>
 
