--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,42 +28,39 @@ android {
         resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
     }
 
-    compileOptions {
-        targetCompatibility 1.8
-        sourceCompatibility 1.8
-    }
 }
 
-def supportVersion = '26.0.2'
+def supportVersion = '26.1.0'
 def retrofitVersion = '2.3.0'
 def transformVersion = '1.2'
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    compile "com.android.support:appcompat-v7:$supportVersion"
-    compile "com.android.support:support-v4:$supportVersion"
-    compile "com.android.support:cardview-v7:$supportVersion"
-    compile "com.android.support:recyclerview-v7:$supportVersion"
-    compile "com.android.support:design:$supportVersion"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+
+    implementation "com.android.support:appcompat-v7:$supportVersion"
+    implementation "com.android.support:support-v4:$supportVersion"
+    implementation "com.android.support:cardview-v7:$supportVersion"
+    implementation "com.android.support:recyclerview-v7:$supportVersion"
+    implementation "com.android.support:design:$supportVersion"
 
     // add library
 
     // retrofit
-    compile "com.squareup.retrofit2:retrofit:$retrofitVersion"
-    compile "com.squareup.retrofit2:adapter-rxjava:$retrofitVersion"
-    compile "com.squareup.retrofit2:converter-gson:$retrofitVersion"
+    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
+    implementation "com.squareup.retrofit2:adapter-rxjava:$retrofitVersion"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
     // rxjava
     // transform
-    compile "com.mobandme:android-transformer:$transformVersion"
-    provided "com.mobandme:android-transformer-compiler:$transformVersion"
+    implementation "com.mobandme:android-transformer:$transformVersion"
+    annotationProcessor "com.mobandme:android-transformer-compiler:$transformVersion"
 
     def daggerVersion = '2.11'
     // dagger
-    compile "com.google.dagger:dagger-android-support:$daggerVersion"
+    implementation "com.google.dagger:dagger-android-support:$daggerVersion"
     annotationProcessor "com.google.dagger:dagger-compiler:$daggerVersion"
 
     // dagger.android
@@ -72,17 +69,19 @@ dependencies {
     // backport of java 8 lambda to java 7,6
 
     // stetho debugging
-    compile 'org.greenrobot:greendao:3.2.2'
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.google.android.exoplayer:exoplayer:r2.5.1'
-    compile 'io.reactivex:rxandroid:1.2.1'
-    compile 'com.google.dagger:dagger-android:2.10'
-    compile 'com.google.dagger:dagger-android-support:2.10'
-    compile 'com.facebook.stetho:stetho:1.5.0'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'org.greenrobot:greendao:3.2.2'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.google.android.exoplayer:exoplayer:r2.5.1'
+    implementation 'io.reactivex:rxandroid:1.2.1'
+    implementation 'com.google.dagger:dagger-android:2.11'
+    implementation 'com.google.dagger:dagger-android-support:2.11'
+    implementation 'com.facebook.stetho:stetho:1.5.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.google.dagger:dagger-android-processor:2.10'
     retrolambdaConfig 'net.orfjackal.retrolambda:retrolambda:2.5.1'
+
+    implementation 'com.github.KwabenBerko:OpenWeatherMap-Android-Library:v1.1.1'
 }
 repositories {
     mavenCentral()
