--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,6 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'org.greenrobot.greendao'
-apply plugin: 'me.tatarka.retrolambda'
 
 android {
     compileSdkVersion 26
@@ -39,6 +38,8 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
+    
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 
     implementation "com.android.support:appcompat-v7:$supportVersion"
@@ -54,14 +55,13 @@ dependencies {
     implementation "com.squareup.retrofit2:adapter-rxjava:$retrofitVersion"
     implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
     // rxjava
-    // transform
-    implementation "com.mobandme:android-transformer:$transformVersion"
-    annotationProcessor "com.mobandme:android-transformer-compiler:$transformVersion"
+
 
     def daggerVersion = '2.11'
     // dagger
-    implementation "com.google.dagger:dagger-android-support:$daggerVersion"
-    annotationProcessor "com.google.dagger:dagger-compiler:$daggerVersion"
+//    implementation "com.google.dagger:dagger-android-support:$daggerVersion"
+//    annotationProcessor "com.google.dagger:dagger-compiler:$daggerVersion"
+//    annotationProcessor 'com.google.dagger:dagger-android-processor:2.10'
 
     // dagger.android
     // if you use the support libraries
@@ -78,8 +78,6 @@ dependencies {
     implementation 'com.facebook.stetho:stetho:1.5.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
-    annotationProcessor 'com.google.dagger:dagger-android-processor:2.10'
-    retrolambdaConfig 'net.orfjackal.retrolambda:retrolambda:2.5.1'
 
     implementation 'com.github.KwabenBerko:OpenWeatherMap-Android-Library:v1.1.1'
 }
