--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,10 @@ buildscript {
     ext.kotlin_version = '1.1.51'
     repositories {
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0-rc2'
+        classpath 'com.android.tools.build:gradle:3.0.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2' // add plugin
     }
@@ -18,6 +19,7 @@ allprojects {
         maven {   url "https://maven.google.com"    }
         maven { url 'https://jitpack.io' }
         jcenter()
+        google()
     }
 }
 
