--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,10 @@ android {
         resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
     }
 
+    packagingOptions {
+        exclude 'META-INF/rxjava.properties'
+    }
+
 }
 
 def supportVersion = '26.1.0'
@@ -56,19 +60,9 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
     implementation "com.squareup.retrofit2:adapter-rxjava:$retrofitVersion"
     implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
+
     // rxjava
-
-
-    def daggerVersion = '2.11'
-    // dagger
-//    implementation "com.google.dagger:dagger-android-support:$daggerVersion"
-//    annotationProcessor "com.google.dagger:dagger-compiler:$daggerVersion"
-//    annotationProcessor 'com.google.dagger:dagger-android-processor:2.10'
-
-    // dagger.android
-    // if you use the support libraries
-
-    // backport of java 8 lambda to java 7,6
+    implementation 'io.reactivex.rxjava2:rxkotlin:2.1.0'
 
     // stetho debugging
     implementation 'org.greenrobot:greendao:3.2.2'
