master Test different techniques from pluralsight and extended java book

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
 
     <permission android:name="android.permission.INTERNET"/>
 
+    <uses-permission android:name="android.permission.VIBRATE"/>
+
     <application
         android:allowBackup="true"
         android:fullBackupContent="true"
@@ -27,6 +29,31 @@
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".TestingIntent"
+            android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="com.example.jocke.kotlin.CUSTOM_VIEW"/>
+
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+        </activity>
+
+        <provider
+            android:name=".TeamContentProvider"
+            android:authorities="com.example.jocke.kotlin.provider"
+            android:enabled="true"
+            android:exported="true">
+        </provider>
+
+        <activity
+            android:name=".SettingsActivity"
+            android:label="@string/title_activity_settings"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.jocke.kotlin.MainActivity"/>
         </activity>
     </application>
 
