--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,10 @@ android {
     packagingOptions {
         exclude 'META-INF/rxjava.properties'
     }
-
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 def supportVersion = '26.1.0'
@@ -41,6 +44,9 @@ def transformVersion = '1.2'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support:support-v4:26.1.0'
+    implementation 'com.android.support:design:26.1.0'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
